# dbtui

./: .gitignore  Cargo.toml  README.md  connections.toml.example
docs/: architecture.md  roadmap.md
src/: app.rs  components.rs  config.rs  db.rs  error.rs  event.rs  history.rs  main.rs  sql.rs  tui.rs
src/components/: connection_list.rs  query_editor.rs  result_table.rs  schema_tree.rs  status_bar.rs
src/db/: mock.rs  mysql.rs
